--- a/main.html
+++ b/main.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Platzi-video</title>
 </head>
+
 <body>
-    
+    <!-- pie de pagina -->
+    <header>
+        <nav>
+            Platzi-video
+            <ul>
+                <li>Cuenta</li>
+                <li>Cerrar Sesion</li>
+            </ul>
+        </nav>
+    </header>
+    <!-- pie de pagina -->
+    <main>
+        Seccion principal</>
+    </main>
+    <!-- pie de pagina -->
+    <footer>
+        <ul>
+            <li>Politica y privacidad</li>
+            <li>Contactanos</li>
+            <li>Terminos y condiciones</li>
+        </ul>
+    </footer>
 </body>
+
 </html>
