--- a/main.html
+++ b/main.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Platzi-video</title>
 </head>
 
@@ -20,9 +20,7 @@
         </nav>
     </header>
     <!-- pie de pagina -->
-    <main>
-        Seccion principal</>
-    </main>
+    <main>Seccion principal</main>
     <!-- pie de pagina -->
     <footer>
         <ul>
