--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/main.css">
     <title>Platzi-video</title>
 </head>
 
@@ -20,7 +21,12 @@
         </nav>
     </header>
     <!-- pie de pagina -->
-    <main>Seccion principal</main>
+    <main class="principal">
+        <p>Vaca</p>
+        <p>Perro</p>
+        <p>Conejo</p>
+        <p>Rinoceronte</p>
+    </main>
     <!-- pie de pagina -->
     <footer>
         <ul>
