padding, margin y modelo de caja

--- a/main.html
+++ b/main.html
@@ -26,6 +26,8 @@
         <p>Perro</p>
         <p>Conejo</p>
         <p>Rinoceronte</p>
+
+        <div class="caja"></div>
     </main>
     <!-- pie de pagina -->
     <footer>
