ordenando el header

--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     <!-- pie de pagina -->
     <header>
         <nav>
-            Platzi-video
+            <img src="./assets/logo-platzi-video-BW2.png" alt="">
             <ul>
                 <li>Cuenta</li>
                 <li>Cerrar Sesion</li>
@@ -22,12 +22,7 @@
     </header>
     <!-- pie de pagina -->
     <main class="principal">
-        <p>Vaca</p>
-        <p>Perro</p>
-        <p>Conejo</p>
-        <p>Rinoceronte</p>
-
-        <div class="caja"></div>
+        <p>Aqui contenido principal</p>
     </main>
     <!-- pie de pagina -->
     <footer>
