--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
         <!-- barra de navegacion -->
         <nav class="header__menu globalFont">
             <!-- logotipo -->
-            <img class="header__menu--logo" src="./assets/logo-platzi-video-BW2.png" alt="Logo platzi video">
+            <img class="header__menu--logo" src="/assets/logo-platzi-video-BW2.png" alt="Logo platzi video">
             <!-- menu navegacion -->
             <div class="menu__perfil">
                 <div class="perfil__avatar">
@@ -33,9 +33,200 @@
     </header>
     <!-- Contenido principal -->
     <main class="principal">
-        <h2>¿Que quieres ver hoy?</h2>
-        <input type="text" name="" id="" placeholder="Buscar...">
-        <p>Aqui el carrousel</p>
+        <section class="principal__finder">
+            <h2>¿Que quieres ver hoy?</h2>
+            <input type="text" name="" id="" placeholder="Buscar...">
+        </section>
+        <h3 class="principal__title">Destacados</h3>
+        <section class="principal__carousel">
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- pie de pagina -->
     <footer class="globalWidth globalBackgroundColor">
