--- a/login.html
+++ b/login.html
@@ -33,8 +33,32 @@
         </nav>
     </header>
     <!-- Contenido principal -->
-    <main class="principal">
-        <h1>aqui el login</h1>
+    <main class="login">
+        <section class="login__container">
+            <h2>Incio sesion</h2>
+            <form class="login__container--form">
+                <input type="text" placeholder="Correo">
+                <input type="password" placeholder="Contraseña">
+                <button class="button">Inciar sesion</button>
+                <div class="login__container--remember-me">
+                    <label>
+                        <input type="checkbox" name="" id="cbox1" value="checkbox"> Recuerdame
+                    </label>
+                    <a href="/">Olvide mi contraseña</a>
+                </div>
+            </form>
+            <section class="login__container--social-media">
+                <div>
+                    <img src="https://img.icons8.com/fluent/48/000000/google-logo.png" alt="Inicia sesion con google" />
+                    Inicia sesion con Google
+                </div>
+                <div>
+                    <img src="https://img.icons8.com/color/48/000000/twitter--v2.png" alt="inicia sesion con tweeter" />
+                    Inicia sesion con Tweeter
+                </div>
+            </section>
+            <p class="login__container--registro">No tienes cuenta, registrate <a href="/">Aqui</a></p>
+        </section>
     </main>
     <!-- pie de pagina -->
     <footer class="globalWidth globalBackgroundColor">
