estilizando menu login

--- a/login.html
+++ b/login.html
@@ -37,8 +37,8 @@
         <section class="login__container">
             <h2>Incio sesion</h2>
             <form class="login__container--form">
-                <input type="text" placeholder="Correo">
-                <input type="password" placeholder="Contraseña">
+                <input class="input" type="text" placeholder="Correo">
+                <input class="input" type="password" placeholder="Contraseña">
                 <button class="button">Inciar sesion</button>
                 <div class="login__container--remember-me">
                     <label>
@@ -49,24 +49,23 @@
             </form>
             <section class="login__container--social-media">
                 <div>
-                    <img src="https://img.icons8.com/fluent/48/000000/google-logo.png" alt="Inicia sesion con google" />
+                    <img src="https://img.icons8.com/ios-glyphs/30/ffffff/google-logo--v1.png"
+                        alt="Inicia sesion con google" />
                     Inicia sesion con Google
                 </div>
                 <div>
-                    <img src="https://img.icons8.com/color/48/000000/twitter--v2.png" alt="inicia sesion con tweeter" />
+                    <img src="/assets/icons8-twitter-50.png" alt="inicia sesion con tweeter" />
                     Inicia sesion con Tweeter
                 </div>
             </section>
-            <p class="login__container--registro">No tienes cuenta, registrate <a href="/">Aqui</a></p>
+            <p class="login__container--register">No tienes cuenta, registrate <a href="/">Aqui</a></p>
         </section>
     </main>
     <!-- pie de pagina -->
-    <footer class="globalWidth globalBackgroundColor">
-        <ul>
-            <li>Politica y privacidad</li>
-            <li>Contactanos</li>
-            <li>Terminos y condiciones</li>
-        </ul>
+    <footer class="footer globalWidth globalBackgroundColor">
+        <a href="">Contactanos</a>
+        <a href="">Politica y privacidad</a>
+        <a href="">Terminos y condiciones</a>
     </footer>
 </body>
 
