--- a/main.html
+++ b/main.html
@@ -229,12 +229,10 @@
         </section>
     </main>
     <!-- pie de pagina -->
-    <footer class="globalWidth globalBackgroundColor">
-        <ul>
-            <li>Politica y privacidad</li>
-            <li>Contactanos</li>
-            <li>Terminos y condiciones</li>
-        </ul>
+    <footer class="footer globalWidth globalBackgroundColor">
+        <a href="">Contactanos</a>
+        <a href="">Politica y privacidad</a>
+        <a href="">Terminos y condiciones</a>
     </footer>
 </body>
 
