Ajustando responsibe header

--- a/registro.html
+++ b/registro.html
@@ -14,11 +14,13 @@
 </head>
 
 <body class="body globalBackgroundColor globalFont">
-    <header class="header globalWidth globalBackgroundColor">
+    <header class="header globalWidth">
         <!-- barra de navegacion -->
         <nav class="header__menu globalFont">
             <!-- logotipo -->
-            <img class="header__menu--logo" src="/assets/logo-platzi-video-BW2.png" alt="Logo platzi video">
+            <div class="menu__logo">
+                <img class="header__menu--logo" src="/assets/logo-platzi-video-BW2.png" alt="Logo platzi video">
+            </div>
             <!-- menu navegacion -->
             <div class="menu__perfil">
                 <div class="perfil__avatar">
