--- a/registro.html
+++ b/registro.html
@@ -22,7 +22,7 @@
                 <img class="header__menu--logo" src="/assets/logo-platzi-video-BW2.png" alt="Logo platzi video">
             </div>
             <!-- menu navegacion -->
-            <div class="menu__perfil">
+            <!-- <div class="menu__perfil">
                 <div class="perfil__avatar">
                     <img class="perfil__avatar--imagen" src="./assets/user-icon.png" alt="Imagen perfil">
                     <p>Perfil</p>
@@ -31,7 +31,7 @@
                     <li><a href="/">Cuenta</a></li>
                     <li><a href="">Log Out</a></li>
                 </ul>
-            </div>
+            </div> -->
         </nav>
     </header>
     <!-- Contenido principal -->
@@ -51,9 +51,9 @@
     </main>
     <!-- pie de pagina -->
     <footer class="footer globalWidth globalBackgroundColor">
-        <a href="">Contactanos</a>
-        <a href="">Politica y privacidad</a>
-        <a href="">Terminos y condiciones</a>
+        <a href="">Terminos de uso</a>
+        <a href="">Declaracion de privacidad</a>
+        <a href="">Centro de ayuda</a>
     </footer>
 </body>
 
