--- a/main.html
+++ b/main.html
@@ -192,6 +192,284 @@
                     </p>
                 </div>
             </div>
+        </section>
+        <h3 class="principal__title">Tendencias</h3>
+        <section class="principal__carousel">
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+        </section>
+        <h3 class="principal__title">Originales Platzi video</h3>
+        <section class="principal__carousel">
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__imagen"
+                    src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="Girl">
+                <div class="carousel-item__details">
+                    <div class="carousel-item__detailsicons">
+                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="Boton play" />
+                        <img src="https://img.icons8.com/flat-round/64/000000/plus.png" alt="Boton mas" />
+                    </div>
+                    <p class="carousel-item__details--Title">
+                        Titulo descriptivo
+                    </p>
+                    <p class="carousel-item__details--subtitle">
+                        Subtitulo
+                    </p>
+                </div>
+            </div>
             <div class="carousel-item">
                 <img class="carousel-item__imagen"
                     src="https://images.pexels.com/photos/2469122/pexels-photo-2469122.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
@@ -230,9 +508,9 @@
     </main>
     <!-- pie de pagina -->
     <footer class="footer globalWidth globalBackgroundColor">
-        <a href="">Contactanos</a>
-        <a href="">Politica y privacidad</a>
-        <a href="">Terminos y condiciones</a>
+        <a href="">Terminos de uso</a>
+        <a href="">Declaracion de privacidad</a>
+        <a href="">Centro de ayuda</a>
     </footer>
 </body>
 
