linkeando sesiones del demo y ajustando responsibe

--- a/login.html
+++ b/login.html
@@ -19,27 +19,17 @@
         <nav class="header__menu globalFont">
             <!-- logotipo -->
             <img class="header__menu--logo" src="/assets/logo-platzi-video-BW2.png" alt="Logo platzi video">
-            <!-- menu navegacion -->
-            <!-- <div class="menu__perfil">
-                <div class="perfil__avatar">
-                    <img class="perfil__avatar--imagen" src="./assets/user-icon.png" alt="Imagen perfil">
-                    <p>Perfil</p>
-                </div>
-                <ul>
-                    <li><a href="/">Cuenta</a></li>
-                    <li><a href="">Log Out</a></li>
-                </ul>
-            </div> -->
         </nav>
     </header>
     <!-- Contenido principal -->
     <main class="login">
         <section class="login__container">
             <h2>Incio sesion</h2>
-            <form class="login__container--form">
+            <form class="login__container--form" action="/main.html">
                 <input class="input" type="text" placeholder="Correo">
                 <input class="input" type="password" placeholder="Contraseña">
-                <button class="button">Inciar sesion</button>
+                <input class="button" type="submit" name="" id="" value="Iniciar sesion">
+                <!-- <button class="button">Inciar sesion</button> -->
                 <div class="login__container--remember-me">
                     <label>
                         <input type="checkbox" name="" id="cbox1" value="checkbox"> Recuerdame
@@ -58,7 +48,7 @@
                     Inicia sesion con Tweeter
                 </div>
             </section>
-            <p class="login__container--register">No tienes cuenta, registrate <a href="/">Aqui</a></p>
+            <p class="login__container--register">No tienes cuenta, registrate <a href="/registro.html">Aqui</a></p>
         </section>
     </main>
     <!-- pie de pagina -->
