--- a/registro.html
+++ b/registro.html
@@ -21,17 +21,6 @@
             <div class="menu__logo">
                 <img class="header__menu--logo" src="/assets/logo-platzi-video-BW2.png" alt="Logo platzi video">
             </div>
-            <!-- menu navegacion -->
-            <!-- <div class="menu__perfil">
-                <div class="perfil__avatar">
-                    <img class="perfil__avatar--imagen" src="./assets/user-icon.png" alt="Imagen perfil">
-                    <p>Perfil</p>
-                </div>
-                <ul>
-                    <li><a href="/">Cuenta</a></li>
-                    <li><a href="">Log Out</a></li>
-                </ul>
-            </div> -->
         </nav>
     </header>
     <!-- Contenido principal -->
@@ -45,7 +34,7 @@
                 <button class="button">Registrarse</button>
             </form>
             <section class="registro__container--inicio-sesion">
-                <a href="">Iniciar sesion</a>
+                <a href="/login.html">Iniciar sesion</a>
             </section>
         </section>
     </main>
