--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
                 </div>
                 <ul>
                     <li><a href="/">Cuenta</a></li>
-                    <li><a href="">Log Out</a></li>
+                    <li><a href="/login.html">Log Out</a></li>
                 </ul>
             </div>
         </nav>
